@@ -284,6 +284,18 @@ CVS: 	src/org/softsmithy/lib/swing/CustomizerActionFactory.java
 CVS: 	src/org/softsmithy/lib/swing/HorizontalAlignment.java 
 CVS: ----------------------------------------------------------------------
 
+
+CVS: ----------------------------------------------------------------------
+CVS: Enter Log.  Lines beginning with `CVS:' are removed automatically
+CVS: 
+CVS: Committing in .
+CVS: 
+CVS: Modified Files:
+CVS: 	docs/CHANGES.txt 
+CVS: 	src/org/softsmithy/lib/swing/HorizontalAlignment.java 
+CVS: 	src/org/softsmithy/lib/swing/JHtmlCustomizer.java 
+CVS: ----------------------------------------------------------------------
+
 v20030630:  -org.softsmithy.lib.awt.layout.InfiniteTableLayout bug fix with 
              preferredSize 
             -org.softsmithy.lib.beans.XDefaultPersistenceDelegate work around
